Added a new icon
A star icon was added to the homepage

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <object data="images/peach.svg" type="image/svg+xml" width="300"></object>
         
             <object data="images/pear.svg" type="image/svg+xml" width="300"></object>
+
+            <object data="images/star.svg" type="image/svg+xml" width="300"></object>
         </article>
     </main>
 
